--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -12,9 +12,9 @@
         </p>
       </div>
       <div class="mt-4 md:mt-0">
-        <button class="px-4 py-2 bg-white text-green-700 rounded-lg font-medium hover:bg-gray-100 transition-colors">
+        <a routerLink="/courses" class="px-4 py-2 bg-white text-green-700 rounded-lg font-medium hover:bg-gray-100 transition-colors inline-block">
           View All Courses
-        </button>
+        </a>
       </div>
     </div>
   </div>
