--- a/src/app/courses-advert/courses-advert.component.css
+++ b/src/app/courses-advert/courses-advert.component.css
@@ -21,6 +21,7 @@
 .line-clamp-2 {
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -28,6 +29,7 @@
 .line-clamp-3 {
   display: -webkit-box;
   -webkit-line-clamp: 3;
+  line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -44,4 +46,16 @@ button {
 /* Font Stack */
 body {
   font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+}
+
+
+/* Background with red gradient */
+.background-gradient-red {
+
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(135deg, #006707 0%, #050090 100%);
+  z-index: -10;
 }
