Fixed the certificate

--- a/src/app/certificates/certificates.component.css
+++ b/src/app/certificates/certificates.component.css
@@ -20,3 +20,13 @@
 .gradient-bg {
   background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 }
+
+:host {
+  --backdrop-color: rgb(255, 255, 255);
+}
+
+.fixed.inset-0 {
+  background-color: var(--backdrop-color);
+}
+
+
